# FLASK-SELFSERVICE

./: Dockerfile  docker-compose.yaml  pyproject.toml
app/: app.py
app/static/: style.css
app/templates/: index.html
